--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "Mini Facebook",
-  "description": "Makes videos float while you're scrolling through your newsfeed.",
+  "description": "Makes videos float while you're scrolling through your Facebook newsfeed.",
   "version": "1.0",
 
   "icons": { "16": "icon16.png",
@@ -15,7 +15,6 @@
   }],
 
   "permissions": [
-    "storage",
-    "contextMenus"
+    "storage"
   ]
 }
