--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,19 @@
     "js": ["jquery-2.1.3.min.js", "floatVideo.js"]
   }],
 
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+
+  "page_action": {
+    "default_icon": "icon128.png",
+    "default_title": "Mini Facebook",
+    "default_popup": "popup.html"
+  },
+
   "permissions": [
-    "storage"
+    "storage",
+    "tabs"
   ]
 }
