--- a/manifest.json
+++ b/manifest.json
@@ -2,14 +2,14 @@
   "manifest_version": 2,
   "name": "Mini Facebook",
   "description": "Makes videos float while you're scrolling through your Facebook newsfeed.",
-  "version": "1.0.11",
+  "version": "1.0.13",
 
   "icons": { "16": "icon16.png",
              "48": "icon48.png",
              "128": "icon128.png" },
 
   "content_scripts": [{
-    "matches": ["https://www.facebook.com/*"],
+    "matches": ["https://web.facebook.com/*","https://www.facebook.com/*"],
     "css": ["floatVideo.css"],
     "js": ["jquery-2.1.3.min.js", "floatVideo.js"]
   }],
